--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon js/server.js"
+    "start": "node js/server.js"
   },
   "keywords": [
     "terminal",
@@ -16,7 +16,6 @@
   "license": "MIT",
   "description": "A simple portfolio",
   "dependencies": {
-    "express": "^4.21.0",
-    "nodemon": "^3.1.4"
+    "express": "^4.21.0"
   }
 }
